--- a/ios/eventapp.xcodeproj/xcshareddata/xcschemes/bayonet3.xcscheme
+++ b/ios/eventapp.xcodeproj/xcshareddata/xcschemes/bayonet3.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "bayonet3.app"
-               BlueprintName = "bayonet3"
-               ReferencedContainer = "container:bayonet3.xcodeproj">
+               BuildableName = "eventapp.app"
+               BlueprintName = "eventapp"
+               ReferencedContainer = "container:eventapp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "bayonet3Tests.xctest"
-               BlueprintName = "bayonet3Tests"
-               ReferencedContainer = "container:bayonet3.xcodeproj">
+               BuildableName = "eventappTests.xctest"
+               BlueprintName = "eventappTests"
+               ReferencedContainer = "container:eventapp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "bayonet3.app"
-            BlueprintName = "bayonet3"
-            ReferencedContainer = "container:bayonet3.xcodeproj">
+            BuildableName = "eventapp.app"
+            BlueprintName = "eventapp"
+            ReferencedContainer = "container:eventapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "bayonet3.app"
-            BlueprintName = "bayonet3"
-            ReferencedContainer = "container:bayonet3.xcodeproj">
+            BuildableName = "eventapp.app"
+            BlueprintName = "eventapp"
+            ReferencedContainer = "container:eventapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
